# pytest-elegant-automation

./: pyproject.toml
