[tool.poetry]
name = "pytest-elegant-automation"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "pytest_elegant_automation"}]

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^7.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

